<resources>
    <string name="app_name">Ch5_MovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tv_pass">Password</string>
    <string name="tv_email">Email</string>
    <string name="tv_login">Login</string>
    <string name="tv_not">Not have account</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_username">Username</string>
    <string name="tv_fullname">Fullname</string>
    <string name="tv_date">Date</string>
    <string name="tv_address">Address</string>
    <string name="tv_update">Update</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_register">Register</string>
    <string name="tv_pass2">Confirm Password</string>
</resources>