<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_profile"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_cam" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_username"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_usernameprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_fullname"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nameprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnupdateprofile"
        android:layout_width="380dp"
        android:backgroundTint="@color/red"
        android:layout_height="60dp"
        android:text="@string/tv_update" />

    <Button
        android:id="@+id/btn_logout"
        android:backgroundTint="@color/red"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:text="@string/tv_logout" />

    <Button
        android:id="@+id/btn_crashdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Test Crashlytics" />

</LinearLayout>